--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 :root{
+	--Very-dark-desaturated-blue: hsl(229, 23%, 23%);
 	--bg-fondo: hsl(185, 75%, 39%);
 	--text: hsl(227, 10%, 46%);
 }
@@ -26,7 +28,8 @@ body{
 	height: 100vh;
 }
 .card{
-	width: 32.6rem;
+	width: 35rem;
+	height: 37rem;
 	background-color: #fff;
 	border-radius: 20px;
 	overflow: hidden;
@@ -50,6 +53,7 @@ body{
 }
 .card__title{
 	font-size: 1.8rem;
+	color: var(--Very-dark-desaturated-blue);
 	margin-top: 2rem;
 } 
 .card__title span{
@@ -68,13 +72,24 @@ body{
 }
 .card__social{
 	text-align: center;
-	/*margin-top: 2rem;
-	margin-bottom: 2rem;*/
 }
 .card__social h3{
-	font-size: 2.8rem;
+	font-size: 2.2rem;
+	color: var(--Very-dark-desaturated-blue);
+	margin-bottom: 0;
 }
 .card__social p{
+	margin-top: 1rem;
 	letter-spacing: 1px;
 	color: var(--text);
+}
+/* FOOTER */
+.attribution{
+	text-align: center;
+	margin-bottom: 3rem;
+}
+@media (max-width: 375px) {
+	.card{
+		width: 32.6rem;
+	}
 }
